# Universal_Screens

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
apps/android/: .gitignore  README.md  build.gradle.kts  settings.gradle.kts
apps/android/app/: build.gradle.kts
apps/android/app/src/main/: AndroidManifest.xml
apps/android/app/src/main/java/com/universalsim/extender/: ConnectionStore.kt  ExtenderNative.kt  ExtenderSession.kt  HidKeys.kt  InputTarget.kt  MainActivity.kt  NearbyDiscovery.kt  PortraitCaptureActivity.kt  RoomSession.kt  Theme.kt  VideoDecoder.kt  WifiConnect.kt
apps/android/app/src/main/res/drawable/: ic_screenextender.xml
apps/android/app/src/main/res/values/: strings.xml
apps/ios/: .gitignore  README.md  project.yml
apps/ios/ScreenExtender/: CastFlow.swift  ClickerView.swift  ConnectView.swift  ConnectionStore.swift  ContentView.swift  ExtenderSession.swift  HidKeys.swift  Info.plist  InputTarget.swift  QRScannerView.swift  RoomSession.swift  ScreenExtender-Bridging-Header.h  ScreenExtenderApp.swift  StreamView.swift  TrackpadView.swift  VideoDecoder.swift
apps/ios/ScreenExtender.xcodeproj/: project.pbxproj
apps/web/: .gitignore  README.md  index.html  room.test.mjs  serve.mjs  spike.html  verify-wasm.mjs
apps/web/src/: client.js  decoder.js  hid.js  input.js  renderer.js  room.js  saved.js  transport.js  wasm.js
crates/android-jni/: Cargo.toml
crates/android-jni/src/: lib.rs
crates/client/: Cargo.toml  build.rs
crates/client/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/discovery/: Cargo.toml
crates/discovery/src/: lib.rs
crates/host/: Cargo.toml  build.rs
crates/host-macos/: Cargo.toml
crates/host-macos/shim/: virtual_display.m
crates/host-macos/src/: discovery.rs  gui.rs  host.rs  main.rs  wifi.rs
crates/host-windows/: Cargo.toml
crates/host-windows/src/: discovery.rs  firewall.rs  gui.rs  main.rs  qr.rs  snapshot.rs  stream.rs  wifi.rs  winlist.rs
crates/host/examples/: inject_probe.rs  list_displays.rs  loopback_viewer.rs  reassembly_probe.rs  vdisplay_probe.rs
crates/host/shim/: virtual_display.m
crates/host/src/: main.rs
crates/mobile-ffi/: Cargo.toml
crates/mobile-ffi/include/: extender_ffi.h
crates/mobile-ffi/src/: lib.rs
crates/protocol-wasm/: Cargo.toml
crates/protocol-wasm/src/: lib.rs
crates/protocol/src/: lib.rs
crates/transport/: Cargo.toml
crates/transport/src/: lib.rs
crates/web-bridge/: Cargo.toml
crates/web-bridge/src/: lib.rs  main.rs
crates/web-bridge/tests/: canonical_bytes.rs  dial_roundtrip.rs  peers_endpoint.rs  proxy_roundtrip.rs
docs/: DEV-PREVIEW.md  M10-transport-encryption.md  M2-input-roundtrip.md  M4-hidpi-deferred.md  M5-mobile-remote-control.md  M6-presentation-clicker.md  M7-browser-client.md  M7-windows-second-screen.md  M8-browser-receiver.md  M8e-webrtc-media.md  M9-lan-discovery.md  README.md  SECOND-SCREEN.md  WINDOWS-CLIENT.md  claude-handover.md
scripts/: make-app-icon.py  preview.ps1  preview.sh  run-clicker-host.ps1
web/: README.md
web/.well-known/: apple-app-site-association
