[workspace]
resolver = "2"
members = [
    "crates/protocol",
    "crates/transport",
    "crates/core",
    "crates/discovery",
    "crates/host",
    "crates/host-windows",
    "crates/host-macos",
    "crates/client",
    "crates/mobile-ffi",
    "crates/android-jni",
    "crates/web-bridge",
    "crates/protocol-wasm",
]

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "MIT"

[workspace.dependencies]
extender-protocol = { path = "crates/protocol" }
extender-transport = { path = "crates/transport" }
extender-core = { path = "crates/core" }
extender-discovery = { path = "crates/discovery" }
extender-web-bridge = { path = "crates/web-bridge" }
