[package]
name = "extender-android-jni"
edition.workspace = true
version.workspace = true
license.workspace = true

[lib]
# Loaded by the Android app via System.loadLibrary("extender_mobile").
name = "extender_mobile"
crate-type = ["cdylib"]

[dependencies]
extender-core.workspace = true
jni = "0.21"
