[package]
name = "extender-client"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
extender-core.workspace = true
extender-protocol.workspace = true
pollster = "0.4.0"
wgpu = "29.0.3"
winit = "0.30.13"

[target.'cfg(target_os="macos")'.dependencies]
apple-cf = "0.9.3"
videotoolbox = "0.18.0"
