[package]
name = "extender-core"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
extender-protocol.workspace = true
# Transport encryption: wrap the TCP stream in a Noise tunnel keyed by the pairing
# PIN before the ClientHello handshake. The `postcard` framing runs on top unchanged.
extender-transport.workspace = true
