[package]
name = "extender-discovery"
edition.workspace = true
version.workspace = true
license.workspace = true

# Platform-agnostic LAN peer discovery. No UI, no platform APIs, so every host
# (Windows, macOS, …) shares one implementation and one wire format. Two halves:
#  • the custom UDP multicast beacon + listener (host ↔ host "Nearby"), pure std;
#  • a standard DNS-SD/mDNS advertisement (mdns-sd) so the phone apps can browse
#    for hosts via Android NSD / iOS Bonjour. See docs/M9-lan-discovery.md.
[dependencies]
mdns-sd = "0.20.1"
