[package]
name = "extender-host-macos"
edition.workspace = true
version.workspace = true
license.workspace = true

[[bin]]
name = "extender-host-macos"
path = "src/main.rs"

[dependencies]
extender-protocol.workspace = true
# "Cast to a browser": dial the cloud rendezvous + bridge to our own listener.
extender-web-bridge.workspace = true
serde = { version = "1", features = ["derive"] }
# QR rendering + logo compositing
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
# Host control window (GUI mode). "persistence" saves preferences across launches.
eframe = { version = "0.29", features = ["persistence"] }
qrcode = { version = "0.14", default-features = false }

[target.'cfg(target_os="macos")'.dependencies]
apple-cf        = "0.9.3"
core-graphics   = { version = "0.23.2", features = ["highsierra"] }
screencapturekit = "6.0.1"
videotoolbox    = "0.18.0"

[target.'cfg(target_os="macos")'.build-dependencies]
cc = "1"
