[package]
name = "extender-host-windows"
edition.workspace = true
version.workspace = true
license.workspace = true

[[bin]]
name = "extender-host-windows"
path = "src/main.rs"

[dependencies]
extender-protocol.workspace = true
serde = { version = "1", features = ["derive"] }

[target.'cfg(target_os="windows")'.dependencies]
windows = { version = "0.62", features = [
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_System_Threading",
    "Win32_System_Console",
] }
# Snapshots: encode the captured screen to JPEG. PNG: decode the embedded UNI·SIM
# logo for the connection QR.
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
# Host control window (GUI mode) + connection QR code. "persistence" remembers
# the "don't connect automatically" preference across launches.
eframe = { version = "0.29", features = ["persistence"] }
qrcode = { version = "0.14", default-features = false }
