[package]
name = "extender-host-windows"
edition.workspace = true
version.workspace = true
license.workspace = true

[[bin]]
name = "extender-host-windows"
path = "src/main.rs"

[dependencies]
extender-protocol.workspace = true
# Transport encryption: auto-detect an encrypted native client vs a legacy/loopback
# plaintext peer per connection, running the Noise responder handshake keyed by the
# host's pairing PIN.
extender-transport.workspace = true
# Shared LAN peer discovery (UDP multicast beacon/listener) — same crate the
# macOS host uses, wrapped by a thin egui adapter in src/discovery.rs.
extender-discovery.workspace = true
# "Cast to a browser": dial the cloud rendezvous + bridge to our own listener.
extender-web-bridge.workspace = true
serde = { version = "1", features = ["derive"] }

[target.'cfg(target_os="windows")'.dependencies]
windows = { version = "0.62", features = [
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_System_Threading",
    "Win32_System_Console",
    "Win32_Graphics_Dwm",
] }
# Snapshots: encode the captured screen to JPEG. PNG: decode the embedded UNI·SIM
# logo for the connection QR.
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
# Mirror/remote-control modes: H.264-encode the captured screen (software, builds
# from source via openh264-sys2 — needs NASM, like the desktop client's decoder).
openh264 = "0.9"
# Host control window (GUI mode) + connection QR code. "persistence" remembers
# the "don't connect automatically" preference across launches.
eframe = { version = "0.29", features = ["persistence"] }
qrcode = { version = "0.14", default-features = false }
# Read the window handle to recolour the title bar (DWM) to match the app theme.
raw-window-handle = "0.6"
