[package]
name = "extender-host"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
extender-core.workspace = true
extender-protocol.workspace = true
# Transport encryption: run the Noise responder handshake for an encrypting native
# client, keyed by the PIN (this dev host doesn't pair, so PIN 0). Cross-platform.
extender-transport.workspace = true
pollster = "0.4.0"
wgpu = "29.0.3"
winit = "0.30.13"

[target.'cfg(target_os="macos")'.dependencies]
apple-cf = "0.9.3"
core-graphics = { version = "0.23.2", features = ["highsierra"] }
screencapturekit = "6.0.1"
videotoolbox = "0.18.0"

[target.'cfg(target_os="macos")'.build-dependencies]
cc = "1"
