[package]
name = "extender-mobile-ffi"
edition.workspace = true
version.workspace = true
license.workspace = true

[lib]
# staticlib for iOS (link into the app), cdylib for Android (.so via the NDK),
# rlib so `cargo test` can link the crate into its test harness.
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
extender-core.workspace = true

[dev-dependencies]
# The end-to-end FFI tests run a fake host, which must complete the same Noise
# responder handshake the real host does (the client encrypts by default now).
extender-transport.workspace = true
